cloudmon/kustomize/sdb/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-dashboard
  labels:
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: "server"
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: sdb
          image: "quay.io/opentelekomcloud/stackmon-status-dashboard"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: "http"
              containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 30
          volumeMounts:
            - name: "instance-config"
              mountPath: "/app/instance/"
              readOnly: true

      volumes:
        - name: "instance-config"
          configMap:
            name: "sdb-config"
  revisionHistoryLimit: 2
