cloudmon/kustomize/sdb/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: status-dashboard
  labels:
    app.kubernetes.io/component: server
spec:
  selector:
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: 5000
